--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 
     <body>
         <h1>1 lesson</h1>
+        <h2>hdjfghjdafgbhdfgiudfgiu</h2>
             <script src="app.js"></script>
+            <div>
+                <img src="https://i.1.creatium.io/disk2/aa/45/ef/b2679be2e1a4b0e490904b224fa8b4c6e3/dsc_8842_1.jpg">
+            </div>
     </body>
 </html>
